--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;600;700&family=Inter:wght@300;400;500;600;700&family=Lora:wght@400;500;600;700&family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;500;700&family=Roboto+Mono:wght@400;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;600;700&family=Inter:wght@300;400;500;600;700&family=Lora:wght@400;500;600;700&family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;500;700&family=Roboto+Mono:wght@400;500&family=Roboto:wght@400;500;700&family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Poppins', sans-serif;
         background-color: #0A0A0A;
-        overflow: hidden; /* Prevent scrollbars from builder layout shift */
+        overflow-x: hidden; /* Prevent horizontal scroll, allow vertical on mobile */
       }
       .font-orbitron {
         font-family: 'Orbitron', sans-serif;
+      }
+      .font-space-grotesk {
+        font-family: 'Space Grotesk', sans-serif;
       }
       .glass-pane {
         background-color: rgba(255, 255, 255, 0.05);
